tests/local/missing-features/simd-func-param.wast
(assert_invalid
  (module (func (param v128)))
  "SIMD support is not enabled")
